@@ -111,8 +111,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>25</source>
-          <target>25</target>
+          <source>24</source>
+          <target>24</target>
         </configuration>
       </plugin>
       <plugin>
@@ -125,6 +125,7 @@
             <id>default-cli</id>
             <configuration>
               <mainClass>com.game.arkanoid/com.game.arkanoid.app.Main</mainClass>
+              <jvmArgs>--enable-native-access=javafx.graphics</jvmArgs>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
